apps/ntfy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy-http
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - ntfy-gateway.novotny.live
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ntfy
          port: 10222
